# cudaprj

./: .gitignore  CMakeLists.txt  README.md  addcpu.cpp  addgpu.cu  build.ps1  hello.cu
